--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: rgb(26, 25, 25);
     color: white;
 }
 
@@ -26,6 +26,12 @@ nav {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+
+.fas {
+    width: 30px;
+    display: none;
+    border-radius: 50%;
 }
 
 .logo {
@@ -111,3 +117,165 @@ nav ul li a {
     line-height: 5px;
 }
 
+
+
+.contact-left p {
+    margin-top: 30px;
+}
+
+.contact-left p img {
+    color: white;
+    margin-left: 15px;
+    font-size: 25px;
+    width: 18px;
+    margin-top: 10px;
+    margin-right: 5px;
+}
+
+.social-icons {
+    margin-top: 30px;
+}
+
+.social-icons a img {
+    text-decoration: none;
+    font-size: 30px;
+    color: white;
+    width: 50px;
+    margin-left: 15px;
+}
+
+.github {
+    border-radius: 50%;
+}
+
+.blog {
+    border-radius: 50%;
+}
+
+.btn {
+    margin-left: 50px;
+    width: 120px;
+    height: 50px;
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 16px;
+    border: none;
+    background-color: rgb(255, 255, 255);
+    font-weight: bold;
+    margin-left: 15px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+}
+
+.btn:hover {
+    background-color: rgb(64, 68, 70);
+    color: white;
+}
+
+.copyright {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: rgb(70, 67, 67);
+    font-weight: 300;
+    margin-top: 20px;
+}
+
+#portfolio {
+    padding: 50px 0;
+}
+
+.work-list {
+    display: flex;
+    grid-template-columns: repeat(auto-fuit, mimax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+
+.work {
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+
+.work img {
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+}
+
+.layer {
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), rgb(141, 138, 138));
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    transition: height 0.5s;
+}
+
+.layer h4 {
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.work:hover .layer {
+    height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+   
+    .fas {
+        width: 30px;
+        display: block;
+    }
+    
+    nav ul {
+        background: rgb(95, 94, 94);
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fas {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 40px;
+    }
+
+    .about-col-1, .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .work-list {
+        display: inherit;
+    }
+}
