--- a/index.css
+++ b/index.css
@@ -120,7 +120,8 @@ nav ul li a {
 
 
 .contact-left p {
-    margin-top: 30px;
+    margin-top: 0;
+
 }
 
 .contact-left p img {
@@ -128,12 +129,12 @@ nav ul li a {
     margin-left: 15px;
     font-size: 25px;
     width: 18px;
-    margin-top: 10px;
+    margin-top: 1px;
     margin-right: 5px;
 }
 
 .social-icons {
-    margin-top: 30px;
+    margin-top: 5px;
 }
 
 .social-icons a img {
@@ -142,6 +143,7 @@ nav ul li a {
     color: white;
     width: 50px;
     margin-left: 15px;
+    margin-bottom: 50px;
 }
 
 .github {
@@ -150,27 +152,6 @@ nav ul li a {
 
 .blog {
     border-radius: 50%;
-}
-
-.btn {
-    margin-left: 50px;
-    width: 120px;
-    height: 50px;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 16px;
-    border: none;
-    background-color: rgb(255, 255, 255);
-    font-weight: bold;
-    margin-left: 15px;
-    margin-top: 15px;
-    margin-bottom: 30px;
-}
-
-.btn:hover {
-    background-color: rgb(64, 68, 70);
-    color: white;
 }
 
 .copyright {
@@ -220,7 +201,7 @@ nav ul li a {
     flex-direction: column;
     padding: 0 40px;
     text-align: center;
-    transition: height 0.5s;
+    transition: 0.5s;
 }
 
 .layer h4 {
@@ -276,6 +257,24 @@ nav ul li a {
     }
 
     .work-list {
-        display: inherit;
+        display: grid;
+        padding: 20px;
+    }
+
+    .layer {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(0,0,0,0.6), rgb(141, 138, 138));
+        border-radius: 10px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        padding: 0 40px;
+        text-align: center;
     }
 }
