--- a/index.css
+++ b/index.css
@@ -10,10 +10,14 @@ body {
     background-color: rgb(26, 25, 25);
     color: white;
 }
-
 .all-body {
     margin-left: 10px;
     margin-right: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 .header {
@@ -65,6 +69,26 @@ nav ul li a {
     font-size: 50px;
 }
 
+.btn {
+    background: rgb(38, 235, 218);
+    border: none;
+    border-radius: 4px;
+    padding: 5px;
+    margin-top: 20px;
+    font-size: 18px;
+    box-shadow: 5px 5px 20px rgb(38, 235, 218);
+}
+
+.hub-btn {
+    border: 2px solid rgb(38, 235, 218);
+    background: none;
+    color: white;
+    padding: 5px;
+    border-radius: 4px;
+    font-size: 17px;
+
+}
+
 #about {
     padding: 80px 0;
 }
@@ -90,13 +114,16 @@ nav ul li a {
 
 .about-col-2 p {
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: -15px;
+    padding: 20px;
 }
 
 .sub-title {
     font-size: 60px;
     font-weight: 600;
-    color: white;
+    color: rgb(38, 235, 218);
+    margin-bottom: 50px;
 }
 
 .tab-titles {
@@ -104,11 +131,16 @@ nav ul li a {
     margin: 20px 0 40px;
 }
 
-.tab-links {
+.tab-titles p {
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.sub-heading {
     margin-right: 50px;
-    font-size: 18px;
     font-weight: 500;
     cursor: pointer;
+    color: rgb(38, 235, 218);
 }
 
 .tab-contents ul li {
@@ -117,11 +149,33 @@ nav ul li a {
     line-height: 5px;
 }
 
+.content1 {
+    margin-left: 20px;
+    margin-top: -30px;
+}
 
+.content1 li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 .contact-left p {
     margin-top: 0;
 
+}
+
+.contact-left h5 {
+    font-size: 30px;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: rgb(38, 235, 218);
+}
+
+.contact-left .p{
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-left: 12px;
+    margin-right: 10px;
+    margin-bottom: 20px;
 }
 
 .contact-left p img {
@@ -141,9 +195,12 @@ nav ul li a {
     text-decoration: none;
     font-size: 30px;
     color: white;
-    width: 50px;
+    width: 32px;
     margin-left: 15px;
     margin-bottom: 50px;
+    border: 2px solid rgb(38, 235, 218);
+    border-radius: 50%;
+
 }
 
 .github {
@@ -158,9 +215,11 @@ nav ul li a {
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: rgb(70, 67, 67);
-    font-weight: 300;
+    background: rgb(0, 0, 0);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-top: 20px;
+    color: white;
+    line-height: 50px;
 }
 
 #portfolio {
@@ -186,23 +245,47 @@ nav ul li a {
     display: block;
 }
 
-.layer {
+.laya {
     width: 100%;
-    height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), rgb(141, 138, 138));
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
+    height: 500px;
+    align-items: center;
+    box-shadow: 0px 0px 20px rgb(38, 235, 218);
+    padding: 20px;
+    border-radius: 5px;
+    margin: 50px;
+    margin-left: 0;
+    margin-right: 10px;
+    text-align: center;
+}
+
+.laya h4 {
+    font-size: 30px;
+    margin: 30px;
+    margin-top: 80px;
+    color: rgb(38, 235, 218);
+}
+
+.laya p {
+    margin: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.laya img {
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+}
+
+.projects {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    transition: 0.5s;
+    gap: 30px;
 }
+
 
 .layer h4 {
     font-weight: 500;
@@ -213,6 +296,15 @@ nav ul li a {
     height: 100%;
 }
 
+.services {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+
+
 @media only screen and (max-width: 600px) {
    
     .fas {
@@ -221,7 +313,7 @@ nav ul li a {
     }
     
     nav ul {
-        background: rgb(95, 94, 94);
+        background: rgb(31, 31, 31);
         position: fixed;
         top: 0;
         right: -200px;
@@ -260,21 +352,14 @@ nav ul li a {
         display: grid;
         padding: 20px;
     }
+     
+    .services {
+        display: block;
+    }
 
-    .layer {
+    .laya img {
         width: 100%;
-        height: 100%;
-        background: linear-gradient(rgba(0,0,0,0.6), rgb(141, 138, 138));
-        border-radius: 10px;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 0 40px;
-        text-align: center;
+        height: 130px;
+        border-radius: 5px;
     }
 }
